remove the buy button for stripe embed

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,14 @@ STRIPE_SECRET_KEY=sk_live_
 # STRIPE_WEBHOOK_SECRET=whsec_
 STRIPE_WEBHOOK_SECRET=whsec_
 
+NEXT_PUBLIC_STRIPE_PRO_PAYMENT_LINK=https://buy.stripe.com/test_00000000000000000000
+NEXT_PUBLIC_STRIPE_ENTERPRISE_PAYMENT_LINK=https://buy.stripe.com/test_00000000000000000000
+
+# Stripe Price IDs for Upgrades (you need to get these from your Stripe dashboard)
+NEXT_PUBLIC_STRIPE_PRO_PRICE_ID=price_xxxx
+NEXT_PUBLIC_STRIPE_ENTERPRISE_PRICE_ID=price_xxxx
+
+
 # ANALYTICS
 NEXT_PUBLIC_POSTHOG_KEY=
 NEXT_PUBLIC_POSTHOG_HOST=https://app.posthog.com
